Update Kali_Linux_Setup.sh